--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Dev",
-            "program": "${workspaceRoot}/src/Index.ts",
+            "program": "${workspaceRoot}/src/index.ts",
             "cwd": "${workspaceRoot}",
             "sourceMaps": true,
             "outFiles": [
@@ -23,7 +23,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Production",
-            "program": "${workspaceRoot}/src/Index.ts",
+            "program": "${workspaceRoot}/src/index.ts",
             "cwd": "${workspaceRoot}",
             "sourceMaps": true,
             "outFiles": [
