Allow set default dependencies for executor and module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
         },
         {
             "fileMatch": [
-                "/kanro.json"
+                "/kanro.json",
+                "/kanro_*.json"
             ],
             "url": "./schema/kanro.json"
         },
