--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/debug": "^0.0.29",
+    "@types/file-type": "^0.0.2",
     "@types/node": "^7.0.5",
     "@types/npm": "^2.0.28",
     "@types/parseurl": "^1.3.0"
@@ -18,8 +19,11 @@
   "dependencies": {
     "ajv": "^4.11.4",
     "debug": "^2.6.1",
+    "file-type": "^4.1.0",
+    "mime-types": "^2.1.15",
     "npm": "^4.3.0",
-    "parseurl": "^1.3.1"
+    "parseurl": "^1.3.1",
+    "read-chunk": "^2.0.0"
   },
   "repository": {
     "type": "github",
