--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "kanro",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "Kanro backend framework.",
   "main": "./bin/index.js",
   "typings": "./bin/",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./bin/test.js"
   },
   "author": "higan@live.cn",
   "license": "MIT",
   "devDependencies": {
-    "@types/debug": "^0.0.29",
     "@types/file-type": "^0.0.2",
     "@types/node": "^7.0.5",
     "@types/npm": "^2.0.28",
-    "@types/parseurl": "^1.3.0"
+    "@types/parseurl": "^1.3.0",
+    "@types/request": "^0.0.45"
   },
   "dependencies": {
     "ajv": "^4.11.4",
@@ -22,7 +22,8 @@
     "mime-types": "^2.1.15",
     "npm": "^4.3.0",
     "parseurl": "^1.3.1",
-    "read-chunk": "^2.0.0"
+    "read-chunk": "^2.0.0",
+    "request": "^2.81.0"
   },
   "repository": {
     "type": "github",
