Refactor module manager

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,8 @@
             "url": "./schema/services.json"
         }
     ],
-    "vsicons.presets.angular": false
+    "vsicons.presets.angular": false,
+    "cSpell.words": [
+        "Proxable"
+    ]
 }
