--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,8 @@
     "vsicons.presets.angular": false,
     "cSpell.words": [
         "Proxable",
-        "Remoting"
+        "Remoting",
+        "chevrotain"
     ],
     "typescript.extension.sortImports.quoteStyle": "double",
     "typescript.extension.sortImports.maxNamedImportsInSingleLine": 6
