--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/file-type": "^0.0.2",
-    "@types/node": "^7.0.5",
+    "@types/node": "^10.5.2",
     "@types/npm": "^2.0.28",
     "@types/parseurl": "^1.3.0"
   },
   "dependencies": {
     "ajv": "^4.11.4",
+    "chevrotain": "^3.7.0",
     "file-type": "^4.1.0",
     "mime-types": "^2.1.15",
-    "npm": "^4.3.0",
+    "npm": "^6.1.0",
     "parseurl": "^1.3.1",
     "read-chunk": "^2.0.0"
   },
